tests/NormalTests/paczka2/big_fuzzy/15627331.err
Error in line 8: AMd4DVj0 A668 5,2
Error in line 11: AMd4DVj0 A217 55,0
Error in line 7: rNqu0D A217 47,4
Error in line 15: yAHm0uRp792 S787 222,5
Error in line 16: rNqu0D A531 97,3
Error in line 12: AMd4DVj0 A668 8,4
Error in line 26: S787 A217 94,9
Error in line 35: AMd4DVj0 A[[8 4[,4
Error in line 32: rNqu0D S787 76,4
Error in line 28: AMd4DVj0 S787 99,7
Error in line 31: kFfUjNAQ5k6 A531 67,6
Error in line 41: AMd4DVj0 A531 33,0
Error in line 52: AMd4DVj0 A217 44,5
Error in line 56: 9BA A217 44,6
Error in line 49: kFfUjNAQ5k6 A217 138,7
Error in line 64: 9BA A668 96,1
Error in line 67: kFfUjNAQ5k6 A668 40,8
Error in line 69: 9BA A217 46,5
Error in line 83: 9BA S787 82,1
Error in line 84: 9BA A531 81,5
Error in line 88: yAHm0uRp792 A668 95,8
Error in line 117: kFfUjNAQ5k6 A531 22,71
Error in line 116: 9BA S787 88,0
Error in line 122: 9BA A531 35,5
Error in line 123: 9BA S787 17,6
Error in line 130: AMd4DVj0 A217 -1,3
Error in line 125: S787 A668 19,5
Error in line 115: AMd4DVj0 A217 683,7
Error in line 137: S787 A531 9,0
Error in line 129: 9BA S787 32,4
Error in line 146: 9BA A531 22,7
Error in line 161: R83 A217 6,3
Error in line 164: kFfUjNAQ5k6 A217 96,2
Error in line 162: R83 A668 7,0
Error in line 177: AMd4DVj0 S787 68,8
Error in line 180: kFfUjNAQ5k6 S787 89,5
Error in line 189: yAHm;uRp792 S787 2,8
Error in line 194: rNqu0D S787 11,0
Error in line 203: AMd4DVj0 A531 97,0
Error in line 195: yAHm0uRp792 S787 0,0
Error in line 206: S787 A217 61,3
Error in line 221: kFfUjNAQ5k6 A668 28,02
Error in line 212: kFfUjNAQ5k6 A217 9,9
Error in line 226: kFfUjNAQ5k6 A668 132,8
Error in line 213: rNqu0D A217 212,2
Error in line 233: rNqu0D S787 12,21
Error in line 218: 9BA A668 35,9
Error in line 237: R83 A217 84,2
